--- a/src/views/checkout.ejs
+++ b/src/views/checkout.ejs
@@ -293,30 +293,33 @@
 
                             return matched;
                         })
-                        .then(matched => async () => {
-                            while (matched.length === 0) {
-                                const res = await fetch("/get-webhooks", {
-                                    method: "POST",
-                                    headers: { "Content-Type": "application/json" },
-                                });
-                                const webhooks = await res.json();
-
-                                matched = webhooks.filter(w =>
-                                    w.description?.includes(userID) || w.content?.includes(userID)
-                                );
-                                if (matched.length === 0) {
-                                    await new Promise(r => setTimeout(r, 1000));
-                                } else {
-                                    alert("Cảm ơn bạn đã thanh toán!");
-                                    closeModal();
-                                    return await fetch("/checkout-submit", {
+                        .then(matched => {
+                            confirmPaymentBtn.addEventListener('click', async () => {
+                                while (matched.length === 0) {
+                                    const res = await fetch("/get-webhooks", {
                                         method: "POST",
                                         headers: { "Content-Type": "application/json" },
-                                        body: JSON.stringify(data),
                                     });
+                                    const webhooks = await res.json();
+
+                                    matched = webhooks.filter(w =>
+                                        w.description?.includes(userID) || w.content?.includes(userID)
+                                    );
+                                    if (matched.length === 0) {
+                                        alert("Chưa thanh toán, thử lại...");
+                                        await new Promise(r => setTimeout(r, 10000));
+                                    }
                                 }
 
-                            }
+                                alert("Cảm ơn bạn đã thanh toán!");
+                                closeModal();
+
+                                return await fetch("/checkout-submit", {
+                                    method: "POST",
+                                    headers: { "Content-Type": "application/json" },
+                                    body: JSON.stringify(data),
+                                });
+                            });
                         })
                         .catch(err => {
                             console.error(err);
