--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -255,15 +255,29 @@
                                     </span>
                                     <h3 class="text-base font-normal text-gray-500">Sales this years</h3>
                                 </div>
-                                <div class="flex items-center justify-end flex-1 text-green-500 text-base font-bold">
-                                    12.5%
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M5.293 7.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </div>
+                                <% if (percentChange>= 0) { %>
+                                    <div
+                                        class="flex items-center justify-end flex-1 text-green-500 text-base font-bold">
+                                        <%= percentChange %>%
+                                            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M5.293 7.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414 0z"
+                                                    clip-rule="evenodd"></path>
+                                            </svg>
+                                    </div>
+                                    <% } else { %>
+                                        <div
+                                            class="flex items-center justify-end flex-1 text-red-500 text-base font-bold">
+                                            <%= percentChange %>%
+                                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd"
+                                                        d="M14.707 12.293a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 111.414-1.414L9 14.586V3a1 1 0 112 0v11.586l3.293-3.293a1 1 0 011.414 0z"
+                                                        clip-rule="evenodd"></path>
+                                                </svg>
+                                        </div>
+                                        <% } %>
                             </div>
                             <div class="h-96 md:h-96" style="min-height: 500px;">
                                 <canvas data-values="<%- JSON.stringify(monthly.map(m => m.revenue) || []) %>"
@@ -344,19 +358,12 @@
 
                             <div class="flex items-center">
                                 <div class="flex-shrink-0">
-                                    <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">2,340</span>
-                                    <h3 class="text-base font-normal text-gray-500">New products this week</h3>
+                                    <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">
+                                        <%= allproducts %>
+                                    </span>
+                                    <h3 class="text-base font-normal text-gray-500">Sản Phẩm Đang Được Đăng Bán</h3>
                                 </div>
-                                <div
-                                    class="ml-5 w-0 flex items-center justify-end flex-1 text-green-500 text-base font-bold">
-                                    14.6%
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M5.293 7.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414 0z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </div>
+
                             </div>
 
                         </div>
@@ -366,8 +373,11 @@
 
                             <div class="flex items-center">
                                 <div class="flex-shrink-0">
-                                    <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">5,355</span>
-                                    <h3 class="text-base font-normal text-gray-500">Visitors this week</h3>
+                                    <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">
+                                        <%= monthOrder.length %>
+                                    </span>
+                                    <h3 class="text-base font-normal text-gray-500">Tổng Đơn Hàng Đã Bán Trong Tháng
+                                    </h3>
                                 </div>
                                 <div
                                     class="ml-5 w-0 flex items-center justify-end flex-1 text-green-500 text-base font-bold">
